testsuite/tests/properties/invalid_generics/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleSeq(list*(Example("example")))
}

class FooNode implements Node[FooNode] {
}

class Example: FooNode implements TokenNode {
}
